force-app/main/default/objects/IT_Circuit__c/fields/IT_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>