force-app/main/default/objects/IT_Circuit__c/fields/IT_Circuit_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Circuit_Code__c</fullName>
    <externalId>true</externalId>
    <label>Circuit Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>