force-app/main/default/objects/IT_Circuit__c/fields/IT_End_Connection_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_End_Connection_Date__c</fullName>
    <label>End Connection Date</label>
    <type>Date</type>
</CustomField>