force-app/main/default/objects/IT_Circuit__c/fields/IT_Meal_Day__c.field-meta.xml
<CustomField>
    <fullName>IT_Meal_Day__c</fullName>
    <label>Meal/Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>