force-app/main/default/objects/IT_Circuit__c/fields/IT_Receipt_Circuit_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Receipt_Circuit_Name__c</fullName>
    <label>Receipt Circuit Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>